--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -72,7 +72,7 @@
 \author{Ilya Mandel}
 \email{imandel@star.sr.bham.ac.uk}
 \affiliation{\addBham}
-\author{Alison Farmer}
+\author{Alison J. Farmer}
 \affiliation{kW Engineering, Oakland, California, 94612, USA}
 
 \begin{abstract}
