Adding mass prediction discussion.

--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -72,7 +72,7 @@
 \author{Ilya Mandel}
 \email{imandel@star.sr.bham.ac.uk}
 \affiliation{\addBham}
-\author{Alison J. Farmer}
+\author{Alison J.~Farmer}
 \affiliation{kW Engineering, Oakland, California, 94612, USA}
 
 \begin{abstract}
@@ -205,15 +205,21 @@ Merging binary black holes are rare outcomes indeed!  [Merging binary neutron st
 
 The star formation rate in the local Universe is $\sim 0.01 M_\odot$ Mpc$^{-3}$ yr$^{-1}$; for an average binary mass of $\sim M_\odot$, the yield $f_\textrm{BBH} \sim 5 \times 10^{-6}$ correspond to a binary black hole merger rate of $\sim 100$ Gpc$^{-3}$ yr$^{-1}$, or 10 per Myr for a Milky-Way equivalent galaxy with a space density of $0.01$ Mpc$^{-3}$.  Of course, the actual calculation of the binary merger rate requires significantly more care to account for the time-varying star formation history convolved with the time delay distribution.  The value of this back-of-the-envelope analysis is not so much in producing a merger rate that matches the rate inferred from gravitational-wave observations a posteriori, as in setting the stage for some of the predictions of the properties of merging binaries and the evolutionary uncertainties.
 
+The classical isolated binary evolution channel discussed in detail above can produce binary black holes with a broad range of masses matching all observations to date \citep[e.g.,][]{Stevenson:2017}, as well as GW170817 and the Galactic double neutron stars \citep[e.g.,][]{Kruckow:2018,VignaGomez:2018}.  In fact, contrary to mistaken lore, the high masses of the first observed black holes were not entirely surprising: such systems were predicted to arise in low-metallicity environments and make a significant contribution to the detected population because the more massive binaries emit more energy in gravitational waves \citep{Dominik:2015}.  Dynamical formation in globular clusters can also lead to a range of masses, but has a stronger preference for more massive binaries as lighter black holes would be ejected by heavier ones in three-body interactions \citep{Rodriguez:2015}.  Chemically homogeneous evolution is only possible for more massive binaries, with total mass above $\sim 50 M_\odot$ \citep{MandeldeMink:2016,Marchant:2016}.
+
+The masses of merging black hole binaries produced through the classical isolated binary evolution channel are likely to be on the equal side of $2:1$, because of the mass ratio constraints to ensure stable mass transfer from the primary to the secondary and dynamically unstable reverse mass transfer, though mass ratios exceeding $2:1$ are more common at low metallicity \citep{Dominik:2012,Stevenson:2017}.  Dynamically formed binaries may also prefer comparable mass ratios because the heaviest black holes are most likely to merge.  On the other hand, chemically homogeneous evolution has a much stronger preference for equal masses \citep{MandeldeMink:2016}, with perhaps nearly equal mass black holes resulting from the evolution of systems that went through a contact phase \citep{Marchant:2016}.  \todo{\citep{Zevin:2016}}
+
+
+
 Furthermore, we conclude that the 
 masses
 delay time
-eccentricity
-mass transfer and spins
+eccentricity \citep{Breivik:2016}
+mass transfer and spins  \citep{Vitale:2016,Stevenson:2017,Farr:2017}
 metallicity and environments
 
 
-Expectations for parameters (masses, mass ratios, spins and spin alignment, eccentricity, environments) of merging binaries \citep{MandelOShaughnessy:2010,Dominik:2012, Breivik, Zevin}
+Expectations for parameters (spins and spin alignment, eccentricity, environments) of merging binaries \citep{MandelOShaughnessy:2010,Dominik:2012}
 
 \section{Prospects}\label{prospect}
 
