Done with section 3.

--- a/Mandel.bib
+++ b/Mandel.bib
@@ -19461,3 +19461,82 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2016PhRvD..93f4001M},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{Kohler:2015,
+   author = {{K{\"o}hler}, K. and {Langer}, N. and {de Koter}, A. and {de Mink}, S.~E. and 
+	{Crowther}, P.~A. and {Evans}, C.~J. and {Gr{\"a}fener}, G. and 
+	{Sana}, H. and {Sanyal}, D. and {Schneider}, F.~R.~N. and {Vink}, J.~S.
+	},
+    title = "{The evolution of rotating very massive stars with LMC composition}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1501.03794},
+ primaryClass = "astro-ph.SR",
+ keywords = {stars: massive, stars: evolution, stars: rotation, stars: abundances, stars: early-type},
+     year = 2015,
+    month = jan,
+   volume = 573,
+      eid = {A71},
+    pages = {A71},
+      doi = {10.1051/0004-6361/201424356},
+   adsurl = {http://adsabs.harvard.edu/abs/2015A%26A...573A..71K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Brott:2011,
+   author = {{Brott}, I. and {de Mink}, S.~E. and {Cantiello}, M. and {Langer}, N. and
+	{de Koter}, A. and {Evans}, C.~J. and {Hunter}, I. and {Trundle}, C. and
+	{Vink}, J.~S.},
+    title = "{Rotating massive main-sequence stars. I. Grids of evolutionary models and isochrones}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1102.0530},
+ primaryClass = "astro-ph.SR",
+ keywords = {stars: abundances, stars: evolution, stars: early-type, stars: rotation, stars: massive},
+     year = 2011,
+    month = jun,
+   volume = 530,
+      eid = {A115},
+    pages = {A115},
+      doi = {10.1051/0004-6361/201016113},
+   adsurl = {http://adsabs.harvard.edu/abs/2011A%26A...530A.115B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Breivik:2016,
+   author = {{Breivik}, K. and {Rodriguez}, C.~L. and {Larson}, S.~L. and 
+	{Kalogera}, V. and {Rasio}, F.~A.},
+    title = "{Distinguishing between Formation Channels for Binary Black Holes with LISA}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {1606.09558},
+ keywords = {globular clusters: general, gravitational waves, stars: black holes },
+     year = 2016,
+    month = oct,
+   volume = 830,
+      eid = {L18},
+    pages = {L18},
+      doi = {10.3847/2041-8205/830/1/L18},
+   adsurl = {http://adsabs.harvard.edu/abs/2016ApJ...830L..18B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Kawano:2017,
+   author = {{Kawano}, T. and {Done}, C. and {Yamada}, S. and {Takahashi}, H. and 
+	{Axelsson}, M. and {Fukazawa}, Y.},
+    title = "{Black hole spin of Cygnus X-1 determined from the softest state ever observed}",
+  journal = {\pasj},
+archivePrefix = "arXiv",
+   eprint = {1701.05758},
+ primaryClass = "astro-ph.HE",
+ keywords = {accretion, accretion disks, X-rays: binaries, X-rays: individual (Cygnus X-1)},
+     year = 2017,
+    month = apr,
+   volume = 69,
+      eid = {36},
+    pages = {36},
+      doi = {10.1093/pasj/psx009},
+   adsurl = {http://adsabs.harvard.edu/abs/2017PASJ...69...36K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
