--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -203,25 +203,38 @@ f_\textrm{BBH} &=& f_\textrm{primary} \times f_\textrm{secondary} \times f_\text
 \end{eqnarray}
 Merging binary black holes are rare outcomes indeed!  [Merging binary neutron stars are comparably rare: while stars with initial masses sufficient to form a neutron star, between roughly 8 and 20 solar masses, are more common than heavier stars necessary to form black holes, neutron star natal kicks and mass loss during a supernova are more likely to disrupt binaries, producing comparable yields.]
 
-The star formation rate in the local Universe is $\sim 0.01 M_\odot$ Mpc$^{-3}$ yr$^{-1}$; for an average binary mass of $\sim M_\odot$, the yield $f_\textrm{BBH} \sim 5 \times 10^{-6}$ correspond to a binary black hole merger rate of $\sim 100$ Gpc$^{-3}$ yr$^{-1}$, or 10 per Myr for a Milky-Way equivalent galaxy with a space density of $0.01$ Mpc$^{-3}$.  Of course, the actual calculation of the binary merger rate requires significantly more care to account for the time-varying star formation history convolved with the time delay distribution.  The value of this back-of-the-envelope analysis is not so much in producing a merger rate that matches the rate inferred from gravitational-wave observations a posteriori, as in setting the stage for some of the predictions of the properties of merging binaries and the evolutionary uncertainties.
+The star formation rate in the local Universe is $\sim 0.01 M_\odot$ Mpc$^{-3}$ yr$^{-1}$; for an average binary mass of $\sim M_\odot$, the yield $f_\textrm{BBH} \sim 5 \times 10^{-6}$ correspond to a binary black hole merger rate of $\sim 100$ Gpc$^{-3}$ yr$^{-1}$, or 10 per Myr for a Milky-Way equivalent galaxy with a space density of $0.01$ Mpc$^{-3}$.  Of course, the actual calculation of the binary merger rate requires significantly more care to account for the time-varying star formation history convolved with the time delay distribution.  The value of this back-of-the-envelope analysis is not so much in producing a merger rate that matches the rate inferred from gravitational-wave observations a posteriori, as in setting the stage for some of the predictions of the properties of merging binaries (see below) and the discussion of evolutionary uncertainties (see \autoref{prospect}).
 
-The classical isolated binary evolution channel discussed in detail above can produce binary black holes with a broad range of masses matching all observations to date \citep[e.g.,][]{Stevenson:2017}, as well as GW170817 and the Galactic double neutron stars \citep[e.g.,][]{Kruckow:2018,VignaGomez:2018}.  In fact, contrary to mistaken lore, the high masses of the first observed black holes were not entirely surprising: such systems were predicted to arise in low-metallicity environments and make a significant contribution to the detected population because the more massive binaries emit more energy in gravitational waves \citep{Dominik:2015}.  Dynamical formation in globular clusters can also lead to a range of masses, but has a stronger preference for more massive binaries as lighter black holes would be ejected by heavier ones in three-body interactions \citep{Rodriguez:2015}.  Chemically homogeneous evolution is only possible for more massive binaries, with total mass above $\sim 50 M_\odot$ \citep{MandeldeMink:2016,Marchant:2016}.
+The classical isolated binary evolution channel discussed in detail above can produce binary black holes with a broad range of masses matching all observations to date \citep[e.g.,][]{Stevenson:2017}, as well as GW170817 and the observed Galactic double neutron stars \citep[e.g.,][]{Kruckow:2018,VignaGomez:2018}.  In fact, contrary to mistaken lore, the high masses of the first observed black holes were not entirely surprising: such systems were predicted to arise in low-metallicity environments and make a significant contribution to the detected population because the more massive binaries emit more energy in gravitational waves \citep{Dominik:2015}.  Dynamical formation in globular clusters can also lead to a range of masses; it may have a stronger preference for more massive binaries as lighter black holes would be ejected by heavier ones in three-body interactions \citep{Rodriguez:2015}, but the mass distribution would be sensitive to natal kicks which may eject black holes at formation \citep{Zevin:2017}.  Chemically homogeneous evolution is only possible in more massive binaries, with total mass above $\sim 50 M_\odot$ \citep{MandeldeMink:2016,Marchant:2016}.
 
-The masses of merging black hole binaries produced through the classical isolated binary evolution channel are likely to be on the equal side of $2:1$, because of the mass ratio constraints to ensure stable mass transfer from the primary to the secondary and dynamically unstable reverse mass transfer, though mass ratios exceeding $2:1$ are more common at low metallicity \citep{Dominik:2012,Stevenson:2017}.  Dynamically formed binaries may also prefer comparable mass ratios because the heaviest black holes are most likely to merge.  On the other hand, chemically homogeneous evolution has a much stronger preference for equal masses \citep{MandeldeMink:2016}, with perhaps nearly equal mass black holes resulting from the evolution of systems that went through a contact phase \citep{Marchant:2016}.  \todo{\citep{Zevin:2016}}
+The masses of merging black hole binaries produced through the classical isolated binary evolution channel are likely to be on the equal side of $2:1$, because of the mass ratio constraints necessary to ensure stable mass transfer from the primary to the secondary and dynamically unstable reverse mass transfer, though mass ratios exceeding $2:1$ are more common at low metallicity \citep{Dominik:2012,Stevenson:2017}.  Dynamically formed binaries may also prefer comparable mass ratios because the heaviest black holes are most likely to merge, though more extreme mass ratios are also possible if the globular cluster contains a particularly heavy stellar-mass black hole or an intermediate-mass black hole \citep{Mandel:2008,Belczynski:2013VMS}.  On the other hand, chemically homogeneous evolution has a much stronger preference for equal masses \citep{MandeldeMink:2016}, with perhaps nearly equal mass black holes resulting from the evolution of systems that went through a contact phase \citep{Marchant:2016}.  
 
+The spins of merging black holes may also carry imprints of their evolutionary history.  Isolated binaries are generally expected to have preferentially aligned spins after undergoing episodes of mass transfer and/or tidal coupling, although natal kicks and possible spin tilts during supernovae could lead to misalignment \citep[e.g.,][]{Farr:2011}.  Meanwhile, the spin directions are likely to be isotropically distributed for dynamically formed binaries \citep[e.g.,][]{Vitale:2015,Stevenson:2017spin,Farr:2017}.  
 
+The spin magnitudes may also depend sensitively on the evolutionary history.  Although a massive star may contain a lot of angular momentum, far in excess of the maximum value allowed for a spinning black hole, the vast majority of that angular momentum will be contained in the outer layers of the star, and can therefore be readily lost through winds or through envelope stripping by a companion.  Therefore, black holes formed from stars that were rapidly spinning at some point in their evolution may still spin slowly unless stars are spun up through mass transfer or tides shortly before collapse \citep{Kushnir:2017,HotokezakaPiran:2017,Zaldarriaga:2017}.  This argument for slowly spinning black holes in compact binaries is potentially in conflict with the claimed observations of rapid spins in black-hole high mass X-ray binaries \citep{MillerMiller:2015}, but these may suffer from measurement systematics \citep[e.g.,][]{Kawano:2017}.  
 
-Furthermore, we conclude that the 
-masses
-delay time
-eccentricity \citep{Breivik:2016}
-mass transfer and spins  \citep{Vitale:2016,Stevenson:2017,Farr:2017}
-metallicity and environments
+The evolutionary history of merging black holes is also tied to their formation environments and delay times before merger.  
+The yield of merging black holes per unit star forming mass is greatest at lowest metallicity, due largely to reduced wind-driven mass loss \citep[e.g.,][]{Belczynski:2010}; for the classical channel, delayed stellar expansion, which allows the stars to develop a larger helium core before engaging in mass transfer, further enhances this effect \citep[e.g.,][]{Stevenson:2017}.  Most of the low-metallicity star formation occurs in the early Universe, before gas is polluted with metal-rich products of stellar evolution, although there is a broad range of metallicities at all times \citep[e.g.,][]{NormanLanger:2005,TaylorKobayashi:2015}.  On the other hand, the delay time between star formation and merger in the classical formation channel peaks at shorter delay times with a $p(\tau) \propto 1/\tau$ decay.  A convolution of the metallicity-specific star formation history and the delay time distribution led \citet{Belczynski:2016} to conclude that, a posteriori, there was a bimodal probability distribution on the star formation history of GW150914, which either formed in the first $\sim$ Gyr after the Big Bang with a long subsequent delay to merger \citep{Dominik:2015}, or formed more recently in a low-metallicity region, such as a low-mass satellite galaxy.  
 
-
-Expectations for parameters (spins and spin alignment, eccentricity, environments) of merging binaries \citep{MandelOShaughnessy:2010,Dominik:2012}
+Finally, the eccentricity of merging black hole binaries may contain information about their past \citep{MandelOShaughnessy:2010}.  While isolated binaries are expected to merge on circular orbits as gravitational waves are very efficient at damping out eccentricity, dynamically formed systems may sometimes retain significant eccentricities if they are already very close at formation.  This may be possible either through two-body captures in Galactic nuclei \citep{OLeary:2008} \citet[but see][]{Tsang:2013}, or through close captures during three-body interactions \citep{Samsing:2013}.
 
 \section{Prospects}\label{prospect}
+
+Unmodeled: \citep{Mandel:2015,2016}
+
+\citet{Zevin:2017} find that the mass distribution alone could be used to determine the formation channel with $\sim 100$ observations, assuming trustworthy models of the mass distribution under different formation channels are available.
+\citet{Vitale:2017,Stevenson:2017spin} carry out a similar investigation for spin-orbit misalignment angles; although these cannot be measured with the same accuracy as chirp masses, several hundred observations should again be sufficient to distinguish multiple formation channels through hierarchical modelling if the distributions under different channels are known \citep{Stevenson:2017spin}.   
+
+However, gravitational-wave spin measurements have so far only constrained the average spin component in the direction of the orbital angular momentum (so-called `effective spin'), which enters the phasing of gravitational waves at the 1.5 post-Newtonian order \citep{PoissonWill}.  This measurement 
+
+
+spin measurements will \citet{Farr:2017} conclude that the low average spin component in the direction of the orbital angular momentum (so-called `effective spin') for the first four binary black holes already points to either isotropic spin distributions or low birth spins 
+
+Within model: \citep{Barrett:2017}
+
+delay time
+
+eccentricity \citep{Breivik:2016}
 
 Detectability of gravitational waves with LIGO and LISA 
 
