Part way through -1 draft of final section.

--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -66,7 +66,7 @@
 \title{Merging stellar-mass binary black holes}
 %\shorttitle{}
 
-\def\addBham{School of Physics and Astronomy and Institute of Gravitational Wave Astronomy, University of Birmingham, Edgbaston, Birmingham B15 2TT, United Kingdom}
+\def\addBham{Institute of Gravitational Wave Astronomy and School of Physics and Astronomy, University of Birmingham, Edgbaston, Birmingham B15 2TT, United Kingdom}
 
 
 \author{Ilya Mandel}
@@ -211,21 +211,35 @@ The masses of merging black hole binaries produced through the classical isolate
 
 The spins of merging black holes may also carry imprints of their evolutionary history.  Isolated binaries are generally expected to have preferentially aligned spins after undergoing episodes of mass transfer and/or tidal coupling, although natal kicks and possible spin tilts during supernovae could lead to misalignment \citep[e.g.,][]{Farr:2011}.  Meanwhile, the spin directions are likely to be isotropically distributed for dynamically formed binaries \citep[e.g.,][]{Vitale:2015,Stevenson:2017spin,Farr:2017}.  
 
-The spin magnitudes may also depend sensitively on the evolutionary history.  Although a massive star may contain a lot of angular momentum, far in excess of the maximum value allowed for a spinning black hole, the vast majority of that angular momentum will be contained in the outer layers of the star, and can therefore be readily lost through winds or through envelope stripping by a companion.  Therefore, black holes formed from stars that were rapidly spinning at some point in their evolution may still spin slowly unless stars are spun up through mass transfer or tides shortly before collapse \citep{Kushnir:2017,HotokezakaPiran:2017,Zaldarriaga:2017}.  This argument for slowly spinning black holes in compact binaries is potentially in conflict with the claimed observations of rapid spins in black-hole high mass X-ray binaries \citep{MillerMiller:2015}, but these may suffer from measurement systematics \citep[e.g.,][]{Kawano:2017}.  
+The spin magnitudes may also depend sensitively on the evolutionary history.  Although a massive star may contain a lot of angular momentum, far in excess of the maximum value allowed for a spinning black hole, the vast majority of that angular momentum will be contained in the outer layers of the star, and can therefore be readily lost through winds or through envelope stripping by a companion.  Therefore, black holes formed from stars that were rapidly spinning at some point in their evolution may still spin slowly unless stars are spun up through mass transfer or tides shortly before collapse \citep{Kushnir:2017,HotokezakaPiran:2017,Zaldarriaga:2017}.   This argument for slowly spinning black holes in compact binaries is potentially in conflict with the claimed observations of rapid spins in black-hole high mass X-ray binaries \citep{MillerMiller:2015}, but these may suffer from measurement systematics \citep[e.g.,][]{Kawano:2017}.  
+
+Gravitational-wave spin measurements have so far only constrained the average spin component in the direction of the orbital angular momentum (so-called `effective spin'), which enters the phasing of gravitational waves at the 1.5 post-Newtonian order \citep{PoissonWill}.  The low effective spins of the first four detected merging black holes allowed \citet{Farr:2017} to conclude that either the spin directions were isotropically distributed or the spin magnitudes were low.
+
+isotropic spin distributions or low birth spins 
+
 
 The evolutionary history of merging black holes is also tied to their formation environments and delay times before merger.  
 The yield of merging black holes per unit star forming mass is greatest at lowest metallicity, due largely to reduced wind-driven mass loss \citep[e.g.,][]{Belczynski:2010}; for the classical channel, delayed stellar expansion, which allows the stars to develop a larger helium core before engaging in mass transfer, further enhances this effect \citep[e.g.,][]{Stevenson:2017}.  Most of the low-metallicity star formation occurs in the early Universe, before gas is polluted with metal-rich products of stellar evolution, although there is a broad range of metallicities at all times \citep[e.g.,][]{NormanLanger:2005,TaylorKobayashi:2015}.  On the other hand, the delay time between star formation and merger in the classical formation channel peaks at shorter delay times with a $p(\tau) \propto 1/\tau$ decay.  A convolution of the metallicity-specific star formation history and the delay time distribution led \citet{Belczynski:2016} to conclude that, a posteriori, there was a bimodal probability distribution on the star formation history of GW150914, which either formed in the first $\sim$ Gyr after the Big Bang with a long subsequent delay to merger \citep{Dominik:2015}, or formed more recently in a low-metallicity region, such as a low-mass satellite galaxy.  
 
 Finally, the eccentricity of merging black hole binaries may contain information about their past \citep{MandelOShaughnessy:2010}.  While isolated binaries are expected to merge on circular orbits as gravitational waves are very efficient at damping out eccentricity, dynamically formed systems may sometimes retain significant eccentricities if they are already very close at formation.  This may be possible either through two-body captures in Galactic nuclei \citep{OLeary:2008} \citet[but see][]{Tsang:2013}, or through close captures during three-body interactions \citep{Samsing:2013}.
 
-\section{Prospects}\label{prospect}
+\section{Prospects for gravitational-wave astronomy}\label{prospect}
 
-Unmodeled: \citep{Mandel:2015,2016}
+Observed rates of binary black hole mergers indicate merger rates of around $\sim 10$ to $\sim 200$ Gpc$^{-3}$ yr$^{-1}$ \citep{GW150914:rates,GW170104}, which points to the prospect of tens of detections in the next observing run and hundred within the next three years, once the LIGO and Virgo instruments reach design sensitivity \citep{scenarios}.  This will yield enough information about both individually exciting events and population distributions to use gravitational-wave astronomy as a genuine tool for exploring stellar and binary evolution.  
+
+Single events that can be individually informative include the discovery of a merging binary black hole with a component mass in the pair-instability supernova mass gap.  Models of pair instability supernovae suggest that no black holes with masses between $\sim 60 M_\odot$ (possibly reduced to $\sim 45 M_\odot$ by pulsational pair instability \citep{Woosley}) and $\sim 130 M_\odot$ should form as a result of stellar collapse, with black holes on both sides of the mass gap possible \citep{Marchant:2016}.  Therefore, a discovery of a single object in this mass gap would point to either dynamical mergers that leave the merger remnant in the dense stellar environment to be reused, or to a theoretical failure in pair instability models.  Similarly, the discovery of a merger component with a mass between $\sim 2.3 M_\odot$ and $\sim 5 M_\odot$, in the range between the most massive known neutron stars and least massive black holes \citep{Ozel:2010,Farr:2011} would shed light on the supernova explosion models, specifically the amount of fallback that can occur before the explosion \citep{Fryer:2011}.
+
+Other individually exciting events could include the first confirmed discovery of an intermediate mass black hole in the few-hundred solar-mass range, either as a merger of two such black holes \citep[e.g.,][]{Veitch:2015,Graff:2015} or as an intermediate-mass-ratio inspiral into such an object \citep[e.g.,][]{Haster:2015IMRI,Haster:2016}.  A source with a detectable in-band eccentricity would clearly signal a dynamical capture.  Meanwhile, a measurement of an effective spin value close to either 1 or $-1$ would point to rapid spins of both black holes.  A substantial positive effective spin coupled with high masses would point to the likelihood of chemically homogeneous formation \citep{Marchant:2016}, while a substantially negative effective spin measurement would indicate the absence of alignment, likely either through a spin tilt or dynamical formation.  
+
+
+We can distinguish the approaches to inference on the observed populations.
+
+Unmodeled: \citep{Mandel:2015,2016}  \citep{Farr:2018} conclude that a few tens of detections may be sufficient to 
 
 \citet{Zevin:2017} find that the mass distribution alone could be used to determine the formation channel with $\sim 100$ observations, assuming trustworthy models of the mass distribution under different formation channels are available.
 \citet{Vitale:2017,Stevenson:2017spin} carry out a similar investigation for spin-orbit misalignment angles; although these cannot be measured with the same accuracy as chirp masses, several hundred observations should again be sufficient to distinguish multiple formation channels through hierarchical modelling if the distributions under different channels are known \citep{Stevenson:2017spin}.   
 
-However, gravitational-wave spin measurements have so far only constrained the average spin component in the direction of the orbital angular momentum (so-called `effective spin'), which enters the phasing of gravitational waves at the 1.5 post-Newtonian order \citep{PoissonWill}.  This measurement 
+ This measurement 
 
 
 spin measurements will \citet{Farr:2017} conclude that the low average spin component in the direction of the orbital angular momentum (so-called `effective spin') for the first four binary black holes already points to either isotropic spin distributions or low birth spins 
@@ -234,20 +248,24 @@ Within model: \citep{Barrett:2017}
 
 delay time
 
-eccentricity \citep{Breivik:2016}
+
 
 Detectability of gravitational waves with LIGO and LISA 
+eccentricity \citep{Breivik:2016}
 
 Implications of gravitational-wave detections: addressing the inverse problem of massive binary evolution  [including unmodeled]
 
 EM observations -- brief summary of Lorentz center workshop?
 
+%Other possible gravitational-wave sources
 
-Other possible gravitational-wave sources
+Other input data points.  Concordance model.
+
+GW paleontology
 
 
 \begin{acknowledgements}
-IM thanks all of the people who have guided him to understand stellar and binary evolution, foremost among them Selma de Mink.   The COMPAS team members at the University of Birmingham (Simon Stevenson, Alejandro Vigna G\'{o}mez, Coenraad Neijssel, Jim Barrett) and external collaborators (including Stephen Justham and Philipp Podsiadlowski) deserve particular thanks.  Thanks also to Cole Miller, Vicky Kalogera, and Will Farr for stimulating discussions spanning many years.
+IM thanks all of the people who have guided him to understand stellar and binary evolution, foremost among them Selma de Mink.   The students who contributed to building COMPAS (Simon Stevenson, Alejandro Vigna G\'{o}mez, Coenraad Neijssel, Jim Barrett, Sebastian Gaebel) and external collaborators (including Stephen Justham and Philipp Podsiadlowski) deserve particular thanks.  Thanks also to Cole Miller, Vicky Kalogera, and Will Farr for stimulating discussions spanning many years.
 \end{acknowledgements}
 
 \bibliographystyle{hapj}
