--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -46,6 +46,7 @@
 \def\nar{New Astronomy Reviews}
 \def\pasa{Publications of the Astron.~Soc.~of Australia}
 \def\aapr{Astron.~\& Astrophys.~Reviews}
+\def\physrep{Physics Reports}
 
 
 \newcommand{\todo}[1]{\textcolor{red}{#1}}
@@ -167,7 +168,7 @@ The first possible channel is perhaps the most studied one, with the first menti
 
 The evolution of this system is sketched out in an van den Heuvel -- style diagram in \autoref{Fig:COMPAS}.  Two massive stars of perhaps $100$ and $75$ solar masses are born in a low-metallicity environment ($\sim 5\%$ of solar metallicity)  binary at a separation of $\sim 10$ AU.  The more massive primary reaches the end of its main sequence first.  At this stage, it has completed fusing hydrogen into helium in the core, and with the loss of energy input, the core begins to contract.  The release of gravitational binding energy and the onset of hydrogen shell burning cause the hydrogen-rich envelope to expand, until the primary expands past the L1 point and overflows its Roche Lobe, beginning to transfer mass onto the secondary.  The mass transfer proceeds on the thermal timescale of the primary donor and is likely significantly non-conservative, as the less evolved secondary, with its correspondingly longer thermal timescale, is unable to accept mass at the rate it is being donated.  The loss of mass from the binary further widens the system, to perhaps $\sim 20$ AU.  The primary loses its entire envelope, leaving behind a naked helium-burning star -- a Wolf-Rayet star.  Following wind-driven mass loss, which further widens the system, the primary collapses into a black hole; here, this collapse is assumed to be complete, without an associated natal kick.  When, a few hundred thousand years later, the secondary reaches the end of its main sequence, the process repeats in reverse: the secondary expands until it commences mass transfer onto the primary.  By this time, the primary has lost around two thirds of its initial mass through a combination of envelope stripping, winds, and possible mass loss during a supernova.  Meanwhile, this mass transfer would need to be almost wholly non-conservative if the accretion onto the black hole obeys the Eddington limit.  Consequently, mass transfer would lead to a rapid hardening of the binary at a rate that is faster than the reduction in the size of the secondary donor on mass loss.  As a result, the more mass it donates, the more the donor overflows its Roche lobe.  This runaway process of dynamically unstable mass transfer leads to the formation of a common envelope of gas around the binary out of the donor's envelope; see \citet{Ivanova:2013} for a review.  The drag force on the black hole from the envelope leads to rapid spiral-in.   The dissipated orbital energy is deposited in the envelope, and may ultimately lead to the expulsion of the envelope.  The orbital energy is decreased by an amount necessary to unbind the envelope, and the resulting black hole -- Wolf-Rayet binary has a separation of only $\sim 35 R_\odot$ in this example.  Following further wind-driven mass loss from the secondary and its collapse into a black hole, the black hole binary is formed.  While this entire process takes only a few million years after the formation the binary, the subsequent inspiral through gravitational-wave emission will last for around 10 billion years before merger.
 
-Of course, this relatively simple picture holds many uncertainties: the rate of mass loss through winds, particularly during specific stellar evolutionary phases such as the luminous blue variable phase \citep{MennekensVanbeveren:2014} and its dependence on metallicity; the efficiency of stable mass transfer efficiency; the response of a star to mass loss and the onset of a common envelope phase \citep{Pavlovskii}; common-envelope survival and the amount of binary hardening associated with the envelope ejection; supernova fallback and natal kicks for black holes \citep[e.g.,][]{Repetto:,Mandel:2015kick}; the possible contribution of double-core common envelopes when unstable mass transfer is initiated between two evolved stars; and the role of dynamically stable non-conservative mass transfer onto a lower-mass compact donor in achieving sufficient binary hardening  \citep{vandenHeuvel:2016,Neijssel:2018}.  We will discuss the possibilities of addressing some of these with future gravitational-wave observations in \autoref{prospect}.
+Of course, this relatively simple picture holds many uncertainties: the rate of mass loss through winds, particularly during specific stellar evolutionary phases such as the luminous blue variable phase \citep{MennekensVanbeveren:2014} and its dependence on metallicity; the efficiency of stable mass transfer efficiency; the response of a star to mass loss and the onset of a common envelope phase \citep{Pavlovskii}; common-envelope survival and the amount of binary hardening associated with the envelope ejection; supernova fallback and natal kicks for black holes \citep[e.g.,][]{Repetto:2012,Mandel:2015kick}; the possible contribution of double-core common envelopes when unstable mass transfer is initiated between two evolved stars; and the role of dynamically stable non-conservative mass transfer onto a lower-mass compact donor in achieving sufficient binary hardening  \citep{vandenHeuvel:2016,Neijssel:2018}.  We will discuss the possibilities of addressing some of these with future gravitational-wave observations in \autoref{prospect}.
 
 \subsection{Abracadabra, thou shalt not expand: chemically homogeneous evolution}
 
@@ -215,9 +216,6 @@ The spin magnitudes may also depend sensitively on the evolutionary history.  Al
 
 Gravitational-wave spin measurements have so far only constrained the average spin component in the direction of the orbital angular momentum (so-called `effective spin'), which enters the phasing of gravitational waves at the 1.5 post-Newtonian order \citep{PoissonWill}.  The low effective spins of the first four detected merging black holes allowed \citet{Farr:2017} to conclude that either the spin directions were isotropically distributed or the spin magnitudes were low.
 
-isotropic spin distributions or low birth spins 
-
-
 The evolutionary history of merging black holes is also tied to their formation environments and delay times before merger.  
 The yield of merging black holes per unit star forming mass is greatest at lowest metallicity, due largely to reduced wind-driven mass loss \citep[e.g.,][]{Belczynski:2010}; for the classical channel, delayed stellar expansion, which allows the stars to develop a larger helium core before engaging in mass transfer, further enhances this effect \citep[e.g.,][]{Stevenson:2017}.  Most of the low-metallicity star formation occurs in the early Universe, before gas is polluted with metal-rich products of stellar evolution, although there is a broad range of metallicities at all times \citep[e.g.,][]{NormanLanger:2005,TaylorKobayashi:2015}.  On the other hand, the delay time between star formation and merger in the classical formation channel peaks at shorter delay times with a $p(\tau) \propto 1/\tau$ decay.  A convolution of the metallicity-specific star formation history and the delay time distribution led \citet{Belczynski:2016} to conclude that, a posteriori, there was a bimodal probability distribution on the star formation history of GW150914, which either formed in the first $\sim$ Gyr after the Big Bang with a long subsequent delay to merger \citep{Dominik:2015}, or formed more recently in a low-metallicity region, such as a low-mass satellite galaxy.  
 
@@ -229,29 +227,24 @@ Observed rates of binary black hole mergers indicate merger rates of around $\si
 
 Single events that can be individually informative include the discovery of a merging binary black hole with a component mass in the pair-instability supernova mass gap.  Models of pair instability supernovae suggest that no black holes with masses between $\sim 60 M_\odot$ (possibly reduced to $\sim 45 M_\odot$ by pulsational pair instability \citep{Woosley}) and $\sim 130 M_\odot$ should form as a result of stellar collapse, with black holes on both sides of the mass gap possible \citep{Marchant:2016}.  Therefore, a discovery of a single object in this mass gap would point to either dynamical mergers that leave the merger remnant in the dense stellar environment to be reused, or to a theoretical failure in pair instability models.  Similarly, the discovery of a merger component with a mass between $\sim 2.3 M_\odot$ and $\sim 5 M_\odot$, in the range between the most massive known neutron stars and least massive black holes \citep{Ozel:2010,Farr:2011} would shed light on the supernova explosion models, specifically the amount of fallback that can occur before the explosion \citep{Fryer:2011}.
 
-Other individually exciting events could include the first confirmed discovery of an intermediate mass black hole in the few-hundred solar-mass range, either as a merger of two such black holes \citep[e.g.,][]{Veitch:2015,Graff:2015} or as an intermediate-mass-ratio inspiral into such an object \citep[e.g.,][]{Haster:2015IMRI,Haster:2016}.  A source with a detectable in-band eccentricity would clearly signal a dynamical capture.  Meanwhile, a measurement of an effective spin value close to either 1 or $-1$ would point to rapid spins of both black holes.  A substantial positive effective spin coupled with high masses would point to the likelihood of chemically homogeneous formation \citep{Marchant:2016}, while a substantially negative effective spin measurement would indicate the absence of alignment, likely either through a spin tilt or dynamical formation.  
+Other individually exciting events could include the first confirmed discovery of an intermediate mass black hole in the few-hundred solar-mass range, either as a merger of two such black holes \citep[e.g.,][]{Veitch:2015,Graff:2015} or as an intermediate-mass-ratio inspiral into such an object \citep[e.g.,][]{Haster:2015IMRI,Haster:2016}.  A source with a detectable in-band eccentricity would clearly signal a dynamical capture \citep{Breivik:2016}.  Meanwhile, a measurement of an effective spin value close to either 1 or $-1$ would point to rapid spins of both black holes.  A substantial positive effective spin coupled with high masses would point to the likelihood of chemically homogeneous formation \citep{Marchant:2016}, while a substantially negative effective spin measurement would indicate the absence of alignment, likely either through a spin tilt or dynamical formation.  
 
+Population statistics will generally contain more information than individual events.  We can distinguish the approaches to inference on the observed populations into unmodeled or weakly modeled inference and inference that relies on accurate models. At the most basic end of weakly modeled inference is the (possibly non-parametric) reconstruction of the underlying distribution, such as the mass function of merging black holes \citep{Mandel:2010,O1:BBH} while accounting for measurement uncertainties and selection effects.  Similarly, the time delay between star formation and binary merger could be extracted by comparing the merger rate as a function of redshift against the star formation rate as a function of redshift \citep{Mandel:2016select}.
 
-We can distinguish the approaches to inference on the observed populations.
+We can look for clustering of events by observed parameters in the hope of finding distinct clusters of systems corresponding to different subpopulations or evolutionary channels.  \citet{Mandel:2015} argued that $\sim 60$ observations would make it possible to cluster events by mass even after allowing for the significant measurement uncertainties inherent in gravitational-wave astronomy, and \citet{Mandel:2016cluster} demonstrated the feasibility of a particular clustering technique.  Meanwhile, \citet{Farr:2018} propose classifying binary black hole mergers by spin misalignment angle into aligned and isotropically distributed subpopulations.  It's worth noting that such clustering or classification schemes cannot hope to correctly assign individual events to a specific cluster, which is generally impossible given the significant measurement uncertainties \citep{Littenberg:2015}; instead, the goal is to measure the relative frequencies of events in different categories.
 
-Unmodeled: \citep{Mandel:2015,2016}  \citep{Farr:2018} conclude that a few tens of detections may be sufficient to 
+The next level of population-based inference relies on assuming that precise, possibly parametrized, subpopulation distributions are known to determine the ratios of different subpopulations (e.g., arising from different formation channels), typically using hierarchical modeling \citep[extreme deconvolution in the language of][]{Hogg:2011}.  \citet{Zevin:2017} found that the mass distribution alone could be used to determine the formation channel with $\sim 100$ observations, assuming trustworthy models of the mass distribution under different formation channels are available.  \citet{Vitale:2017,Stevenson:2017spin} carry out a similar investigation for spin-orbit misalignment angles; although these cannot be measured with the same accuracy as chirp masses, several hundred observations should again be sufficient to distinguish multiple formation channels through hierarchical modelling if the distributions under different channels are known \citep{Stevenson:2017spin}.   
 
-\citet{Zevin:2017} find that the mass distribution alone could be used to determine the formation channel with $\sim 100$ observations, assuming trustworthy models of the mass distribution under different formation channels are available.
-\citet{Vitale:2017,Stevenson:2017spin} carry out a similar investigation for spin-orbit misalignment angles; although these cannot be measured with the same accuracy as chirp masses, several hundred observations should again be sufficient to distinguish multiple formation channels through hierarchical modelling if the distributions under different channels are known \citep{Stevenson:2017spin}.   
+Of course, there is a multitude of uncertain physics within a given model.  How much mass do stars lose in winds, and what is the precise impact of metallicity and rotation on stellar evolution \citep[e.g.,][]{Renzo:2017}?  What happens to the star's angular momentum during collapse, how much mass is ejected, and how much of an asymmetric kick does the star receive \citep[e.g.,][]{Mirabel:2016}? How conservative is mass transfer in binaries and how much angular momentum is carried away by the mass lost from the binary during non-conservative mass transfer \citep[e.g.,][]{vandenHeuvel:2017}?  What are the conditions for the onset of a common-envelope phase and the common envelope ejection, and how does the binary change in the process \citep[e.g.,][]{Ivanova:2013}?   How do dynamical interactions affect binary evolution?  And, in turn, how do massive stellar binaries and their compact remnants feed back into astrophysics and cosmology on all scales?
 
- This measurement 
+One approach to addressing these big questions is to use the framework of population synthesis, which makes it possible to include uncertain parameters
 
-
-spin measurements will \citet{Farr:2017} conclude that the low average spin component in the direction of the orbital angular momentum (so-called `effective spin') for the first four binary black holes already points to either isotropic spin distributions or low birth spins 
-
+ incorporate parameters for the 
 Within model: \citep{Barrett:2017}
-
-delay time
-
 
 
 Detectability of gravitational waves with LIGO and LISA 
-eccentricity \citep{Breivik:2016}
+Einstein telescope
 
 Implications of gravitational-wave detections: addressing the inverse problem of massive binary evolution  [including unmodeled]
 
